--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,8 +15,9 @@
     <form action="/add-note" method="post" class="text-center">
         <button class="btn btn-primary mx-3" type="submit">New Book Note</button>
     </form>
-    <% if (locals.notes) { %>
-    <% notes.forEach(note => { %>
+    <% if (notes.length !== 0) { %>
+    <% notes.slice().reverse().forEach(note => { %>
+        <hr>
         <div class="note">
             <div class="book-title">
                 <%= note.book_name %>
@@ -30,10 +31,20 @@
                     Date added: <%= note.date_added %>
                 </p>
             </div>
+            <div class="buttons">
+                <form action="/edit" method="post" class="mx-3">
+                    <input type="hidden" name="noteId" value="<%= note.id %>">
+                    <button type="submit" class="btn btn-secondary">Edit</button>
+                </form>
+                <form action="/delete" method="post" class="mx-3">
+                    <input type="hidden" name="noteId" value="<%= note.id %>">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
         </div>
     <% }); %> 
     <% } else { %>
-        <h2 class="display-6">No notes added</h2>
+        <h2 class="display-6 m-5">No notes added</h2>
     <% } %>
 </body>
 </html>
