--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
             </div>
             <div class="date-added">
                 <p>
-                    Date added: <%= note.date_added %>
+                    Date last updated: <%= note.date_added %>
                 </p>
             </div>
             <div class="buttons">
