--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,12 +5,20 @@ h1{
     display: flex;
     flex-direction: column;
 }
-.note{
-    display: flex;
-    flex-direction: column;
-}
 .note > div{
     margin: 20px;
+}
+.note{
+    display: flex;
+}
+.note-text{
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.note-image{
+    float: right;
 }
 .date-added{
     color: lightgrey;
