add author for the book

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,10 @@
                 </div>
                 <div class="note-text">
                     <div class="book-title display-6 fw-medium">
-                        <%= note.book_name %>
+                        <%= note.book_name %> 
+                        <p class="display-6">
+                            by <%= note.author %>
+                        </p>
                     <hr>
                     </div>
                     <div class="book-note">
